--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -5,10 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiosqlite>=0.21.0",
+    "alembic>=1.17.2",
+    "asyncpg>=0.31.0",
     "email-validator>=2.3.0",
     "fastapi>=0.124.0",
     "httpx>=0.28.1",
     "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
     "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
 ]
