feat: Proxy Swagger UI and OpenAPI specification through Nginx.

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -42,4 +42,15 @@ server {
         proxy_buffering off;
         proxy_cache off;
     }
+
+    # Proxy Swagger UI
+    location /docs {
+        proxy_pass http://backend:8000/docs;
+        proxy_set_header Host $host;
+    }
+
+    location /openapi.json {
+        proxy_pass http://backend:8000/openapi.json;
+        proxy_set_header Host $host;
+    }
 }
