fix: Adjust Nginx proxy configuration for API endpoints to resolve leaderboard visibility issues and add new tests.

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -20,19 +20,24 @@ server {
     # Actually, in vite.config.ts we had /auth -> http://backend/auth
     # So we should mirror that.
     
-    location /auth/ {
-        proxy_pass http://backend:8000/auth/;
+    # Proxy Auth endpoints
+    location /auth {
+        proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_no_cache 1;
+        proxy_cache_bypass 1;
     }
 
-    location /leaderboard/ {
-        proxy_pass http://backend:8000/leaderboard/;
+    location /leaderboard {
+        proxy_pass http://backend:8000;
         proxy_set_header Host $host;
+        proxy_no_cache 1;
+        proxy_cache_bypass 1;
     }
 
-    location /players/ {
-        proxy_pass http://backend:8000/players/;
+    location /players {
+        proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         
         # SSE Support
